--- a/Proyecto.html
+++ b/Proyecto.html
@@ -20,7 +20,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 //Variables utiles 
 //Precio base de la cotización, en quetzales, lo puede cambiar
 //noprotect
-
+const salir = 'salir';
 var precio_base = 2500;
 
 //Valores de los recargos 
@@ -33,7 +33,8 @@ var casado_25 = 0.2; // 20%
 var casado_50 = 0.3; // 30%
 
 var hijos_recargo = 0.2; // 20%
-
+var propiedades_recargo = 0.35; // 35%
+var salario_recargo = 0.05; // 5%
 
 //Recargo
 var recargo = 0;
@@ -42,11 +43,16 @@ var recargo_total = 0;
 //Precio final 
 var precio_final = 0;
 
+//Reiniciando Cotizacion
+var reset = 0;
+
+
 //Mensajes de alerta para ingresar datos 
 var nombre = prompt("Ingrese su nombre, por favor");
 var edad = prompt("¿Cuantos años tiene?", "0");
 
-if(edad >= 18){
+
+  if(edad >= 18){
   var casado = prompt("¿Está casado actualmente?", "si/no");
 //Comprobamos la edad del cónyuge, solamente si se está casado/a
 var edad_conyuge;
@@ -72,6 +78,17 @@ if("SI" == hijos.toUpperCase()){
   var cantidad_hijos_numero = 0;
 }
 
+//Preguntamos al asegurado si tiene propiedades
+var propiedades = prompt("¿Tiene propiedades?", "si/no");
+//Comprobamos la cantidad de propiedades si los tienen
+if("SI" == propiedades.toUpperCase()){
+  var cantidad_propiedades = prompt("Ingrese la cantidad de propiedades", "0");
+  var cantidad_propiedades_numero = 0;
+}
+//Ingreso del salario y guardamos en una variable
+var salario = prompt("Por favor ingrese su Salario", "3400");
+//Comprobamos la cantidad de propiedades si los tienen
+    
 /**
  * 1. convierta la cantidad de hijos a numero
  */
@@ -133,6 +150,32 @@ if("SI" == hijos.toUpperCase()){
     recargo_total = recargo_total + recargo
   }
 }  
+    
+//Aqui calculamos el recargo por la cantidad de propiedades si el asegurado los tiene
+var cantidad_propiedades_numero = parseInt(cantidad_hijos);
+var suma_recargo_propiedades = 0;
+if("SI" == propiedades.toUpperCase()){
+  if(cantidad_propiedades_numero >= 1){
+    //Calculamos el recargo en base a la edad 
+    suma_recargo_propiedades = precio_base * propiedades_recargo
+    recargo = cantidad_propiedades_numero * suma_recargo_propiedades
+    //Sumamos todos los recargos que hemos obtenido
+    recargo_total = recargo_total + recargo
+  }
+}
+
+//Aqui calculamos el recargo por el salario del asegurado
+var cantidad_propiedades_numero = parseInt(cantidad_hijos);
+var suma_recargo_salario = 0;
+if(salario > 0) {
+  if(cantidad_propiedades_numero >= 1){
+    //Calculamos el recargo en base a la edad 
+    suma_recargo_salario = salario * salario_recargo
+    recargo = suma_recargo_salario
+    //Sumamos todos los recargos que hemos obtenido
+    recargo_total = recargo_total + recargo
+  }
+}
 
 
 precio_final = precio_base + recargo_total
@@ -140,9 +183,12 @@ precio_final = precio_base + recargo_total
 alert ("Para el asegurado "+nombre)
 alert ("El recargo total sera de: "+recargo_total)
 alert ("El precio sera de: "+precio_final)
+
+
 }else{
-  alert("Para poder cotizarle debe ser mayor de edad.");
+  alert("Para poder cotizarle debe ser mayor de edad.");  
 }
+
 
 </script>
 </body>
